<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/expand_bottom_sheet_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_expand_bottom_sheet" />
    <Button
        android:id="@+id/collapse_bottom_sheet_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expand_bottom_sheet_button"
        android:text="@string/text_collapse_bottom_sheet" />
    <Button
        android:id="@+id/hide_bottom_sheet_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/collapse_bottom_sheet_button"
        android:text="@string/text_hide_bottom_sheet" />
    <Button
        android:id="@+id/show_bottom_sheet_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hide_bottom_sheet_button"
        android:text="@string/text_show_bottom_sheet_dialog" />
    <Button
        android:id="@+id/bottom_sheet_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_bottom_sheet_dialog_button"
        android:text="@string/text_bottom_sheet_toggle" />
</RelativeLayout>